テスト結果レポートを更新

--- a/learning/prototype/better_algorithm/nosetests-results.ipynb
+++ b/learning/prototype/better_algorithm/nosetests-results.ipynb
@@ -295,6 +295,116 @@
    "source": [
     "get_word_and_tfidfval_of_features(features, vectorizer.vocabulary_)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (2) test_daikin_conversation_mlp.py\n",
+    "\n",
+    "以下のテストでは、中途半端にfeatureが抽出された場合でも、予期しないラベルに誘導されてしまう現象は見られませんでした。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:learning makmorit$ nosetests -s learning/tests/engine/test_daikin_conversation_mlp.py\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+    "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+    "  DeprecationWarning)\n",
+    "{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    "0.986932599725\n",
+    "{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'host': 'localhost', 'user': 'root', 'name': 'donusagi_bot_test', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'password': '6mR%9T4g'}}\n",
+    ".\n",
+    "----------------------------------------------------------------------\n",
+    "Ran 5 tests in 147.736s\n",
+    "\n",
+    "OK\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## (3) test_ptna_conversation_mlp.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:learning makmorit$ nosetests -s learning/tests/engine/test_ptna_conversation_mlp.py\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+    "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+    "  DeprecationWarning)\n",
+    "{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    "0.973707274321\n",
+    "{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".{'database': {'user': 'root', 'password': '6mR%9T4g', 'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'name': 'donusagi_bot_test', 'host': 'localhost'}}\n",
+    ".\n",
+    "----------------------------------------------------------------------\n",
+    "Ran 6 tests in 101.050s\n",
+    "\n",
+    "OK\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## (4) test_daikin_conversation_mlp.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:learning makmorit$ nosetests -s learning/tests/engine/test_toyotsu_human_conversation_mlp.py\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+    "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+    "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+    "  DeprecationWarning)\n",
+    "{'database': {'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'user': 'root', 'host': 'localhost', 'name': 'donusagi_bot_test', 'password': '6mR%9T4g'}}\n",
+    "0.995264404104\n",
+    "{'database': {'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'user': 'root', 'host': 'localhost', 'name': 'donusagi_bot_test', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'user': 'root', 'host': 'localhost', 'name': 'donusagi_bot_test', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'user': 'root', 'host': 'localhost', 'name': 'donusagi_bot_test', 'password': '6mR%9T4g'}}\n",
+    ".{'database': {'endpoint': 'mysql://root@localhost/donusagi_bot_test?charset=utf8', 'user': 'root', 'host': 'localhost', 'name': 'donusagi_bot_test', 'password': '6mR%9T4g'}}\n",
+    ".\n",
+    "----------------------------------------------------------------------\n",
+    "Ran 4 tests in 272.376s\n",
+    "\n",
+    "OK\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
