レポートの表示が崩れたので修正

--- a/learning/prototype/external_vocabulary/02-compare.ipynb
+++ b/learning/prototype/external_vocabulary/02-compare.ipynb
@@ -306,7 +306,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -330,6 +332,8 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -370,8 +374,8 @@
        " ('出張', 1216, 800),\n",
        " ('保険', 1109, 770),\n",
        " ('場合', 1455, 766),\n",
-       " ('海外', 2093, 744),\n",
        " ('退職', 2642, 744),\n",
+       " ('海外', 2093, 744),\n",
        " ('申請', 2193, 600),\n",
        " ('なる', 232, 564),\n",
        " ('科目', 2270, 522),\n",
@@ -403,7 +407,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### (1-2) 全Botにおける頻出単語を確認"
    ]
@@ -412,7 +419,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -493,7 +502,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -507,7 +518,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## (2) 単独BotにおけるTFIDF値を算出\n",
     "\n",
@@ -520,7 +534,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -556,7 +572,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -611,7 +629,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -689,6 +709,8 @@
    "execution_count": 21,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -696,26 +718,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index=0  [する]0.159->0.132 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=1  [する]0.055->0.046 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=2  [する]0.062->0.049 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=6  [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.198->0.138 [ない]0.000->0.000\n",
-      "index=7  [する]0.098->0.080 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=9  [する]0.116->0.093 [れる]0.000->0.000 [どう]0.122->0.102 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=10 [する]0.104->0.091 [れる]0.000->0.000 [どう]0.219->0.201 [できる]0.000->0.000 [ない]0.222->0.157\n",
-      "index=11 [する]0.121->0.097 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=12 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.184->0.185 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=13 [する]0.093->0.071 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=14 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.170->0.118 [ない]0.000->0.000\n",
-      "index=15 [する]0.092->0.072 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=16 [する]0.078->0.064 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=17 [する]0.136->0.113 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=18 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.225->0.162\n",
-      "index=19 [する]0.088->0.074 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=21 [する]0.090->0.076 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=23 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.162->0.113\n",
-      "index=24 [する]0.061->0.053 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
-      "index=25 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.211->0.147\n"
+      "#0  [する]0.159->0.132 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#1  [する]0.055->0.046 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#2  [する]0.062->0.049 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#6  [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.198->0.138 [ない]0.000->0.000\n",
+      "#7  [する]0.098->0.080 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#9  [する]0.116->0.093 [れる]0.000->0.000 [どう]0.122->0.102 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#10 [する]0.104->0.091 [れる]0.000->0.000 [どう]0.219->0.201 [できる]0.000->0.000 [ない]0.222->0.157\n",
+      "#11 [する]0.121->0.097 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#12 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.184->0.185 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#13 [する]0.093->0.071 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#14 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.170->0.118 [ない]0.000->0.000\n",
+      "#15 [する]0.092->0.072 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#16 [する]0.078->0.064 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#17 [する]0.136->0.113 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#18 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.225->0.162\n",
+      "#19 [する]0.088->0.074 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#21 [する]0.090->0.076 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#23 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.162->0.113\n",
+      "#24 [する]0.061->0.053 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.000->0.000\n",
+      "#25 [する]0.000->0.000 [れる]0.000->0.000 [どう]0.000->0.000 [できる]0.000->0.000 [ない]0.211->0.147\n"
      ]
     }
    ],
@@ -733,7 +755,7 @@
     "        continue\n",
     "    \n",
     "    display_cnt += 1\n",
-    "    print('index=%-2d [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f' % (\n",
+    "    print('#%-2d [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f [%s]%0.3f->%0.3f' % (\n",
     "        index,\n",
     "        most_freq_words[0],\n",
     "        data_toyotsu[index_toyotsu[0]],\n",
@@ -773,6 +795,8 @@
    "execution_count": 22,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -811,6 +835,8 @@
    "execution_count": 23,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -842,6 +868,8 @@
    "execution_count": 24,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -866,7 +894,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
