--- a/learning/prototype/external_vocabulary/03-compare-accuracy.ipynb
+++ b/learning/prototype/external_vocabulary/03-compare-accuracy.ipynb
@@ -12,21 +12,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## (0) 結果"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### accuracy に大きな変化は見られませんでした。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "| テストデータ | サンプル数 | ラベル数 | accuracy（全Bot使用時） | <> | accuracy（単一Bot使用時） |\n",
     "| :--- | :---: | :---: | :---: | :---: | :---: |\n",
@@ -47,12 +56,15 @@
     "\n",
     "指定BotのTFIDF値を、全Botの学習セットを使用して算出します。\n",
     "\n",
-    "ベクトライズにはすべてのBotの学習セットを使用しますが、ターゲット「test_toyotsu_human_conversation.csv」に対応するTFIDF値のベクトルだけを取得するようにします。"
+    "ベクトライズにはすべてのBotの学習セットを使用しますが、学習／評価時は、該当Botに対応するTFIDF値のベクトルだけを使用するようにします。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### (1-1) 環境／テストデータ準備"
    ]
