内容に誤りがあったので修正しました

--- a/learning/prototype/rank_learning/01-SVMRank-outline.ipynb
+++ b/learning/prototype/rank_learning/01-SVMRank-outline.ipynb
@@ -53,9 +53,15 @@
     "\n",
     "### (1-2) 学習\n",
     "\n",
-    "テストデータを SVMRank の学習処理に渡すと、pairwise 手法により学習を行い、モデルが生成されます。\n",
+    "教師データを SVMRank の学習処理に渡すと、pairwise 手法により学習を行い、モデルが生成されます。\n",
     "\n",
-    "テストデータのフォーマット：(前項の教師データのフォーマットと同一)\n",
+    "### (1-3) 予測\n",
+    "\n",
+    "\n",
+    "テストデータを SVMRank の予測処理に渡すと、予測結果データが生成され、テストデータについてのランキング・スコアが得られます。\n",
+    "\n",
+    "\n",
+    "テストデータのフォーマット：(前述の教師データのフォーマットと同一)\n",
     "\n",
     "| ランク | クエリーID | feature1 |  feature2 | ・・・ |  feature10 | \n",
     "| :---: | :---: | :---: |  :---: | :---: |  :---: | \n",
@@ -63,10 +69,6 @@
     "| 1 | qid:9 | 1:0.1 |  2:1.0 | ・・・ |  10:0.1 | \n",
     "| 1 | qid:9 | 1:0.5 |  2:0.0 | ・・・ |  10:0.3 | \n",
     "\n",
-    "### (1-3) 予測\n",
-    "\n",
-    "\n",
-    "テストデータを SVMRank の予測処理に渡すと、テストデータについてのランキング・スコアが得られます。\n",
     "\n",
     "予測結果データのフォーマット：(テストデータと並びが同じになるようです)\n",
     "\n",
