--- a/learning/prototype/rank_learning/04-sofia-ml-evaluation.ipynb
+++ b/learning/prototype/rank_learning/04-sofia-ml-evaluation.ipynb
@@ -331,7 +331,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "モデルファイルの中身はサポートベクトルとおぼしきデータの羅列となっておりました。"
    ]
@@ -472,6 +475,348 @@
     "Total of 1000 trials. \n",
     "\n",
     "MacBookPro-makmorit-jp:sofia-ml makmorit$ \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## (4) ランク学習処理の確認\n",
+    "\n",
+    "sofia-ml を使用してランク学習／予測の動作確認を行いました。\n",
+    "\n",
+    "結論から申し上げると、前述デモのようなSVMによるクラス分類はともかく、ランク学習には使えそうにないという印象を受けました。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (4-1) テストデータの準備\n",
+    "\n",
+    "Microsoft のランク学習用ベンチマークデータ（MSLR）をダウンロードし、テストデータを作成しました。\n",
+    "\n",
+    "こちらからダウンロードしています\n",
+    "\n",
+    "https://www.microsoft.com/en-us/research/project/mslr/ <--- Microsoft Learning to Rank Datasetsの説明ページ\n",
+    "\n",
+    "https://1drv.ms/u/s!AtsMfWUz5l8nbOIoJ6Ks0bEMp78 <--- このリンクをクリックする"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:MofMofInc makmorit$ ls -alR MSLR-WEB10K\n",
+    "total 16\n",
+    "drwx------@  8 makmorit  staff   272 May  4 20:09 .\n",
+    "drwxr-xr-x  18 makmorit  staff   612 May  5 10:47 ..\n",
+    "-rw-r--r--@  1 makmorit  staff  6148 May  5 12:07 .DS_Store\n",
+    "drwxr-xr-x@  5 makmorit  staff   170 Apr 28  2010 Fold1\n",
+    "drwxr-xr-x@  5 makmorit  staff   170 Apr 28  2010 Fold2\n",
+    "drwxr-xr-x@  5 makmorit  staff   170 Apr 28  2010 Fold3\n",
+    "drwxr-xr-x@  5 makmorit  staff   170 Apr 28  2010 Fold4\n",
+    "drwxr-xr-x@  5 makmorit  staff   170 Apr 28  2010 Fold5\n",
+    "\n",
+    "MSLR-WEB10K/Fold1:\n",
+    "total 2714904\n",
+    "drwxr-xr-x@ 5 makmorit  staff        170 Apr 28  2010 .\n",
+    "drwx------@ 8 makmorit  staff        272 May  4 20:09 ..\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  279254654 Apr 30  2010 test.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  838011150 Apr 30  2010 train.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  272760099 Apr 30  2010 vali.txt\n",
+    "\n",
+    "MSLR-WEB10K/Fold2:\n",
+    "total 2714904\n",
+    "drwxr-xr-x@ 5 makmorit  staff        170 Apr 28  2010 .\n",
+    "drwx------@ 8 makmorit  staff        272 May  4 20:09 ..\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  280714022 Apr 30  2010 test.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  830057227 Apr 30  2010 train.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  279254654 Apr 30  2010 vali.txt\n",
+    "\n",
+    "MSLR-WEB10K/Fold3:\n",
+    "total 2714904\n",
+    "drwxr-xr-x@ 5 makmorit  staff        170 Apr 28  2010 .\n",
+    "drwx------@ 8 makmorit  staff        272 May  4 20:09 ..\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  276606739 Apr 30  2010 test.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  832705142 Apr 30  2010 train.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  280714022 Apr 30  2010 vali.txt\n",
+    "\n",
+    "MSLR-WEB10K/Fold4:\n",
+    "total 2714896\n",
+    "drwxr-xr-x@ 5 makmorit  staff        170 Apr 28  2010 .\n",
+    "drwx------@ 8 makmorit  staff        272 May  4 20:09 ..\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  280690389 Apr 30  2010 test.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  832728775 Apr 30  2010 train.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  276606739 Apr 30  2010 vali.txt\n",
+    "\n",
+    "MSLR-WEB10K/Fold5:\n",
+    "total 2714904\n",
+    "drwxr-xr-x@ 5 makmorit  staff        170 Apr 28  2010 .\n",
+    "drwx------@ 8 makmorit  staff        272 May  4 20:09 ..\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  272760099 Apr 30  2010 test.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  836575415 Apr 30  2010 train.txt\n",
+    "-rwxr-xr-x@ 1 makmorit  staff  280690389 Apr 30  2010 vali.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (4-2) 学習処理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "MSLRのデータセットは非常に大きいので、教師データ（train.txt）と正解ラベル付きのテストデータ（vali.txt）を、それぞれ10,000件／2,500件ずつ切り出して使用します。\n",
+    "\n",
+    "その後、任意のエディターで「CR+LF」を「LF」だけに変換しておきます。\n",
+    "\n",
+    "（CRコードが入っていると、なぜかsofia-mlがエラー「Segmentation fault: 11」を発生させダウンしてしまいます）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ pwd\n",
+    "/Users/makmorit/GitHub/donusagi-bot/learning/prototype/rank_learning/sofia-ml/trunk/sofia-ml\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ head -10000 ~/Documents/Development/MofMofInc/MSLR-WEB10K/Fold1/train.txt > data/train.txt\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ head -2500  ~/Documents/Development/MofMofInc/MSLR-WEB10K/Fold1/vali.txt > data/vali.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "ちなみに学習データのフォーマットはSVMRankなどに使用するものと一緒で、概ね下記のようになります。\n",
+    "\n",
+    ">&lt;class-label&gt;△qid:&lt;optional-query-id&gt;△&lt;feature-id&gt;:&lt;feature-value&gt;\n",
+    "\n",
+    "（△は半角スペース文字）\n",
+    "\n",
+    "class-labelとあるのはラベルを意味するそうですが、ランク学習の場合はランクを示す適合度を指定します。\n",
+    "\n",
+    "すなわち、ラベルの値が大きいほど適合度が高い＝ランキングが上位、ということになるかと存じます。\n",
+    "\n",
+    ">The class label for test data is required but not used; it's okay to put in a dummy placeholder value such as 0 for test data. For binary-class classification problems, the training labels should be 1 or -1. For ranking problems, the labels may be any numeric value, with higher values being judged as \"more preferred\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ head -5 data/train.txt\n",
+    "2 qid:1 1:3 2:3 3:0 4:0 5:3 6:1 7:1 8:0 9:0 10:1（以下略）\n",
+    "2 qid:1 1:3 2:0 3:3 4:0 5:3 6:1 7:0 8:1 9:0 10:1（以下略）\n",
+    "0 qid:1 1:3 2:0 3:2 4:0 5:3 6:1 7:0 8:0.666667 9:0 10:1（以下略）\n",
+    "2 qid:1 1:3 2:0 3:3 4:0 5:3 6:1 7:0 8:1 9:0 10:1（以下略）\n",
+    "1 qid:1 1:3 2:0 3:3 4:0 5:3 6:1 7:0 8:1 9:0 10:1（以下略）\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "学習セットファイル data/train.txt を引数として学習処理を行うと、data/model.out というファイルにモデルが生成されます。\n",
+    "\n",
+    "- コマンド例（デフォルトで指定される引数設定は省略します）\n",
+    "\n",
+    "> ./sofia-ml --loop_type combined-ranking --training_file data/train.txt --model_out data/model.out\n",
+    "\n",
+    "- loop_type という引数に combined-ranking を指定します。CRRアルゴリズムを使用するようです。\n",
+    "\n",
+    "> * combined-ranking Performs CRR algorithm for combined regression and ranking. Alternates between pairwise rank-based steps and standard stochastic gradient steps on single examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ ./sofia-ml --loop_type combined-ranking --training_file data/train.txt --model_out data/model.out\n",
+    "Reading training data from: data/train.txt\n",
+    "Time to read training data: 0.189115\n",
+    "Time to complete training: 0.135738\n",
+    "Writing model to: data/model.out\n",
+    "   Done.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (3-2) 予測処理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "テストデータファイル data/vali.txt を引数として予測処理処理を行うと、data/vali-result.txt に予測結果が格納されます。\n",
+    "\n",
+    "- コマンド例\n",
+    "\n",
+    "> ./sofia-ml --model_in data/model.out --test_file data/vali.txt --results_file data/vali-result.txt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ ./sofia-ml --model_in data/model.out --test_file data/vali.txt --results_file data/vali-result.txt\n",
+    "Reading model from: data/model.out\n",
+    "   Done.\n",
+    "Reading test data from: data/vali.txt\n",
+    "Time to read test data: 0.047355\n",
+    "Time to make test prediction results: 0.000539\n",
+    "Writing test results to: data/vali-result.txt\n",
+    "   Done.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (3-3) 予測結果を参照\n",
+    "\n",
+    "results.txt に、スコアとラベルが、タブ区切りで出力されます。\n",
+    "\n",
+    "ちなみに、予測結果ファイルのレコードは、テストデータのレコードと同じ並びになっているとのことです。\n",
+    "\n",
+    "また、予測結果ファイルのラベルは、テストデータに格納されたものと同値です。\n",
+    "\n",
+    ">--results_file file \n",
+    ">\n",
+    ">File to which to write predictions, when --test_file is used. Results for each line are in the format &lt;prediction&gt;\\t&lt;label from test file&gt;\n",
+    ">\n",
+    ">and correspond line-by-line with the examples form the --test_file.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ head -20 data/vali-result.txt\n",
+    "84913    0 <---ラベル０のスコアが、ラベル２のスコアを上回っている\n",
+    "6095.63    0\n",
+    "87700    1\n",
+    "21552.3    0\n",
+    "72224.2    1 <---ラベル１のスコアが、ラベル２のスコアを上回っている\n",
+    "61089.2    2 <---ラベル２のスコア（すなわちここに表示されているものの中で、最もランクが高いはず）\n",
+    "56598.7    1\n",
+    "61460.9    1\n",
+    "61529.4    0\n",
+    "106045    0\n",
+    "63855.6    0\n",
+    "13307.6    1\n",
+    "67008.9    0\n",
+    "74871.7    1\n",
+    "40840.4    0\n",
+    "56024.3    0\n",
+    "87642.9    0 <---ラベル０のスコアが、ラベル２のスコアを上回っている\n",
+    "74126.9    1\n",
+    "87030.8    0 <---ラベル０のスコアが、ラベル２のスコアを上回っている\n",
+    "18443.2    1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "上記、予測結果ファイルの内容を見た限りでは、ラベル０（＝ランクが低い）のスコアが、ラベル２（＝ランクが高い）のスコアを上回っているなど、ランキング・スコアを示しているとは思えない結果となっておりました。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (3-4) モデルの評価\n",
+    "\n",
+    "評価用として提供されていた perl スクリプトは、（デモ用の）２値判定用SVMの結果評価に特化したもののようで、ランク学習には使用できませんでした。\n",
+    "\n",
+    "（無理に実行させようとすると、Illegal division by zero のエラーでダウンします）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "```\n",
+    "MacBookPro-makmorit-jp:sofia-ml makmorit$ perl eval.pl data/vali-result.txt\n",
+    "Illegal division by zero at eval.pl line 81.\n",
     "```"
    ]
   }
