コメントが間違っていたので修正

--- a/learning/prototype/better_algorithm/19-doc2vec-variation-04.ipynb
+++ b/learning/prototype/better_algorithm/19-doc2vec-variation-04.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "    '''\n",
     "        モデル内に保持されているベクトルの数を取得\n",
-    "        （教師データ数と同じであることを確認）\n",
+    "        （featureの数 [回答パターン数の２倍] と同じであることを確認）\n",
     "    '''\n",
     "    if len(model.docvecs) != len(sentence_list):\n",
     "        raise Exception('train_by_doc2vec: Failed to create document vector')\n",
