コメントが間違っていたので修正

--- a/learning/prototype/better_algorithm/31-Wikipedia-contents-csv.ipynb
+++ b/learning/prototype/better_algorithm/31-Wikipedia-contents-csv.ipynb
@@ -129,7 +129,7 @@
     "editable": true
    },
    "source": [
-    "## (2) Wikipedia全文のTaggedDocumentを生成"
+    "## (2) Wikipedia全文のCSVファイルを生成"
    ]
   },
   {
@@ -160,7 +160,7 @@
     "editable": true
    },
    "source": [
-    "### (2-2) 抽出コンテンツを一旦CSVへ変換"
+    "### (2-2) 抽出コンテンツをCSVへ変換"
    ]
   },
   {
@@ -419,7 +419,7 @@
     "editable": true
    },
    "source": [
-    "### (2-3) 抽出コンテンツをTaggedDocumentへ変換"
+    "### (2-3) 抽出コンテンツをCSVから読込"
    ]
   },
   {
@@ -456,7 +456,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -478,7 +480,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -500,7 +504,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -523,6 +529,8 @@
    "execution_count": 19,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
