コメントが間違っていたので修正

--- a/learning/prototype/better_algorithm/21-Doc2Vec-with-Wikipedia.ipynb
+++ b/learning/prototype/better_algorithm/21-Doc2Vec-with-Wikipedia.ipynb
@@ -7,9 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Doc2VecでWikipedia全文を使用\n",
+    "# Doc2VecでWikipedia文書を使用\n",
     "\n",
-    "Wiki全文の一部を、Doc2Vecのインプットに指定し、動作確認します。\n",
+    "巨大コーパスをもつWiki文書の一部を、Doc2Vecのインプットに指定し、動作確認します。\n",
     "\n",
     "今回は２つの手法を比較しました。\n",
     "\n",
@@ -27,7 +27,7 @@
     "editable": true
    },
    "source": [
-    "## (1) Wikipediaコンテンツファイルから本文を抽出"
+    "## (1) Wikipediaコンテンツファイルから全文書を抽出"
    ]
   },
   {
@@ -48,7 +48,7 @@
     "editable": true
    },
    "source": [
-    "## (2) Wikipedia全文のTaggedDocumentを生成"
+    "## (2) Wikipedia文書のTaggedDocumentを生成"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "editable": true
    },
    "source": [
-    "Wikipedia全文のCSVファイルからデータフレームを読み込み、TaggedDocumentに変換します。"
+    "Wikipedia文書のCSVファイルからデータフレームを読み込み、TaggedDocumentに変換します。"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "    Wikipedia全文から生成されたCSVを読み込み、\n",
+    "    Wikipedia文書から生成されたCSVを読み込み、\n",
     "    配列を生成する\n",
     "'''\n",
     "extracted_dir_path = '/Users/makmorit/Documents/Development/Wikipedia/extracted'\n",
@@ -220,7 +220,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "生成されたTaggedDocumentの一例をみてみます。\n",
     "\n",
@@ -234,6 +237,8 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -269,7 +274,7 @@
     "editable": true
    },
    "source": [
-    "### (3-1) Wikipedia全文のTaggedDocumentだけをインプットとして学習"
+    "### (3-1) Wikipedia文書のTaggedDocumentだけをインプットとして学習"
    ]
   },
   {
@@ -307,7 +312,7 @@
     "def build_vocabulary(tagged_document_list, dm=0, size=100):\n",
     "    '''\n",
     "        tagged_document_listは、\n",
-    "        すべてのWikipediaのタグ付きコーパス\n",
+    "        Wikipedia文書のタグ付きコーパス\n",
     "        (前述のtagged_document)が収容されたリスト。\n",
     "\n",
     "        これを引数にして、\n",
