レポートを小修正
コーパスに含まれる単語がモデル内のWord2Vecボキャブラリにない場合、警告を表示するようにしました

--- a/learning/prototype/better_algorithm/24-Doc2Vec-Wiki-with-scikit_learn.ipynb
+++ b/learning/prototype/better_algorithm/24-Doc2Vec-Wiki-with-scikit_learn.ipynb
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_document_vector(question, model):\n",
+    "def get_document_vector(question, model, warning):\n",
     "    '''\n",
     "        question: \n",
     "            分かち書きされていない文書\n",
@@ -251,16 +251,26 @@
     "            Doc2Vecの学習済みモデルを使用して\n",
     "            生成される類似文書ベクトル\n",
     "            （モデルに合わせ、品詞は落とさない様にする）\n",
+    "\n",
+    "        warning:\n",
+    "            コーパスに含まれる単語が、\n",
+    "            モデル内のWord2Vecボキャブラリにない場合、\n",
+    "            警告を表示する\n",
     "    '''\n",
     "    corpus = Nlang_naive.split(question).split()\n",
     "    inferred_vector = model.infer_vector(corpus)\n",
+    "    \n",
+    "    if warning:\n",
+    "        for c in corpus:\n",
+    "            if not c in model.wv.vocab:\n",
+    "                print(\"Warning: word [%s] does not exist in Word2Vec vocabulary.\" % c)\n",
     "\n",
     "    return inferred_vector\n",
     "\n",
-    "def get_document_vectors(questions, model):\n",
+    "def get_document_vectors(questions, model, warning=False):\n",
     "    document_vectors = []\n",
     "    for question in questions:\n",
-    "        inferred_vector = get_document_vector(question, model)\n",
+    "        inferred_vector = get_document_vector(question, model, warning)\n",
     "        document_vectors.append(list(inferred_vector))\n",
     "\n",
     "    return np.array(document_vectors)"
@@ -305,7 +315,7 @@
     "    #all_array = TextArray(question_answers['question'], vectorizer=self.vectorizer)\n",
     "    #question_array = TextArray([question], vectorizer=self.vectorizer)\n",
     "    all_array      = get_document_vectors(question_answers['question'], dbow_model)\n",
-    "    question_array = get_document_vectors([question], dbow_model)\n",
+    "    question_array = get_document_vectors([question], dbow_model, warning=True)\n",
     "    \n",
     "    print('count: my-ope all questions=%d, document vectors=%d (features=%d)' % (\n",
     "        np.size(question_answers['question']), all_array.shape[0], all_array.shape[1]\n",
@@ -340,27 +350,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/29 PM 03:44:01 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/29 PM 03:44:01 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:09:26 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: word [ＪＡＬ] does not exist in Word2Vec vocabulary.\n",
+      "Warning: word [マイレージ] does not exist in Word2Vec vocabulary.\n",
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6819             13393.0    0.195777\n",
-      "1       6823             13397.0    0.152361\n",
-      "2       6802             13377.0    0.141884\n",
-      "3       6911             13485.0    0.140777\n",
-      "4       6745             13317.0    0.135494\n",
-      "5       6860             13434.0    0.127516\n",
-      "6       6968             13548.0    0.126695\n",
-      "7       6986             13566.0    0.125811\n",
-      "8       6834             13408.0    0.120590\n",
-      "9       6966             13546.0    0.115356\n"
+      "0       6896             13470.0    0.210352\n",
+      "1       6716             13286.0    0.155709\n",
+      "2       6988             13568.0    0.152977\n",
+      "3       6882             13456.0    0.145493\n",
+      "4       6820             13394.0    0.130865\n",
+      "5       6818             13392.0    0.129206\n",
+      "6       6950             13530.0    0.124946\n",
+      "7       6715             13285.0    0.123943\n",
+      "8       6785             13358.0    0.118327\n",
+      "9       6778             13351.0    0.116842\n"
      ]
     }
    ],
@@ -382,8 +394,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/29 PM 03:44:02 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/29 PM 03:44:02 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:09:27 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -393,16 +405,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6749             13310.0    0.506196\n",
-      "1       6759             13331.0    0.479292\n",
-      "2       6766             13338.0    0.464680\n",
-      "3       6743             13314.0    0.441656\n",
-      "4       6856             13430.0    0.432572\n",
-      "5       6744             13316.0    0.414209\n",
-      "6       6863             13437.0    0.411949\n",
-      "7       6763             13335.0    0.410406\n",
-      "8       6851             13425.0    0.409212\n",
-      "9       6792             13367.0    0.398344\n"
+      "0       6749             13310.0    0.507852\n",
+      "1       6759             13331.0    0.478666\n",
+      "2       6766             13338.0    0.465102\n",
+      "3       6743             13314.0    0.442194\n",
+      "4       6856             13430.0    0.432483\n",
+      "5       6744             13316.0    0.414182\n",
+      "6       6863             13437.0    0.412427\n",
+      "7       6763             13335.0    0.411030\n",
+      "8       6851             13425.0    0.407822\n",
+      "9       6792             13367.0    0.397552\n"
      ]
     }
    ],
@@ -424,8 +436,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/29 PM 03:44:02 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/29 PM 03:44:02 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:09:27 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -435,16 +447,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6710             13280.0    0.350886\n",
-      "1       6916             13495.0    0.350341\n",
-      "2       6775             13348.0    0.327487\n",
-      "3       6933             13512.0    0.327060\n",
-      "4       6917             13496.0    0.325855\n",
-      "5       6807             13382.0    0.323945\n",
-      "6       6859             13433.0    0.323725\n",
-      "7       6787             13360.0    0.322733\n",
-      "8       6907             13481.0    0.322318\n",
-      "9       6804             13379.0    0.321103\n"
+      "0       6710             13280.0    0.351464\n",
+      "1       6916             13495.0    0.348684\n",
+      "2       6775             13348.0    0.330269\n",
+      "3       6933             13512.0    0.327353\n",
+      "4       6807             13382.0    0.326287\n",
+      "5       6917             13496.0    0.325977\n",
+      "6       6787             13360.0    0.324090\n",
+      "7       6859             13433.0    0.323967\n",
+      "8       7021             13600.0    0.320636\n",
+      "9       6907             13481.0    0.320494\n"
      ]
     }
    ],
@@ -466,8 +478,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/29 PM 03:44:02 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/29 PM 03:44:03 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:09:28 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:09:28 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -477,16 +489,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6909             13483.0    0.413178\n",
-      "1       6985             13565.0    0.287570\n",
-      "2       6871             13445.0    0.282850\n",
-      "3       6853             13427.0    0.274783\n",
-      "4       6773             13345.0    0.271242\n",
-      "5       6807             13382.0    0.270986\n",
-      "6       6924             13503.0    0.269384\n",
-      "7       6986             13566.0    0.268611\n",
-      "8       6738             13324.0    0.260625\n",
-      "9       6888             13462.0    0.260544\n"
+      "0       6909             13483.0    0.414760\n",
+      "1       6985             13565.0    0.286627\n",
+      "2       6871             13445.0    0.282477\n",
+      "3       6807             13382.0    0.275013\n",
+      "4       6853             13427.0    0.273209\n",
+      "5       6924             13503.0    0.271079\n",
+      "6       6773             13345.0    0.270750\n",
+      "7       6986             13566.0    0.270314\n",
+      "8       6738             13324.0    0.261917\n",
+      "9       6752             13305.0    0.261138\n"
      ]
     }
    ],
